# meow

./: CMakeLists.txt  README.md
docs/: CNAME  Gemfile  _config.yml  index.md  usage.md
docs/_layouts/: default.html
docs/assets/css/: style.scss
src/: CMakeLists.txt  audio.cc  audio.h  canvas.cc  canvas.h  config.h.in  controller.cc  controller.h  correlation.cc  correlation.h  iprogressmonitor.h  main.cc  project.h  regression.cc  regression.h  render.cc  render.h  serialization.cc  track.cc  track.h  waveform.cc  waveform.h
src/frontends/: CMakeLists.txt
src/frontends/gtk3/: CMakeLists.txt  asyncoperationwindow.cc  asyncoperationwindow.h  canvas.cc  canvas.h  intonationeditor.cc  intonationeditor.h  main.cc  mainwindow.cc  mainwindow.h  resources.xml.in
src/frontends/gtk3/ui/: asyncoperationwindow.ui  mainmenu.ui  mainwindow.ui  welcomedialog.ui
